@@ -1,47 +1,63 @@
 package com.ttn.linksharing.utils;
 
-import javax.crypto.Cipher;
-import javax.crypto.KeyGenerator;
-import javax.crypto.SecretKey;
 import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Arrays;
+import java.util.Base64;
+
+import javax.crypto.Cipher;
+import javax.crypto.spec.SecretKeySpec;
 
 public class CryptoUtils {
 
-    private static SecretKey key;
+    private static SecretKeySpec secretKey;
+    private static String secret = "@MySecretKey";
 
-    static {
+    private static void setKey(String myKey)
+    {
+        MessageDigest sha;
         try {
-            key = KeyGenerator.getInstance("DES").generateKey();
-        } catch (NoSuchAlgorithmException e) {
+            byte[] key = myKey.getBytes(StandardCharsets.UTF_8);
+            sha = MessageDigest.getInstance("SHA-1");
+            key = sha.digest(key);
+            key = Arrays.copyOf(key, 16);
+            secretKey = new SecretKeySpec(key, "AES");
+        }
+        catch (NoSuchAlgorithmException e) {
             e.printStackTrace();
         }
     }
 
-    public static String encrypt(String str) throws Exception {
-        Cipher ecipher = Cipher.getInstance("DES");
-        ecipher.init(Cipher.ENCRYPT_MODE, key);
-
-        // Encode the string into bytes using utf-8
-        byte[] utf8 = str.getBytes(StandardCharsets.UTF_8);
-
-        // Encrypt
-        byte[] enc = ecipher.doFinal(utf8);
-
-        // Encode bytes to base64 to get a string
-        return new sun.misc.BASE64Encoder().encode(enc);
+    public static String encrypt(String strToEncrypt)
+    {
+        try
+        {
+            setKey(secret);
+            Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5Padding");
+            cipher.init(Cipher.ENCRYPT_MODE, secretKey);
+            return Base64.getEncoder().encodeToString(cipher.doFinal(strToEncrypt.getBytes(StandardCharsets.UTF_8)));
+        }
+        catch (Exception e)
+        {
+            System.out.println("Error while encrypting: " + e.toString());
+        }
+        return strToEncrypt;
     }
 
-    public static String decrypt(String str) throws Exception {
-        Cipher dcipher = Cipher.getInstance("DES");
-        dcipher.init(Cipher.DECRYPT_MODE, key);
-
-        // Decode base64 to get bytes
-        byte[] dec = new sun.misc.BASE64Decoder().decodeBuffer(str);
-
-        byte[] utf8 = dcipher.doFinal(dec);
-
-        // Decode using utf-8
-        return new String(utf8, StandardCharsets.UTF_8);
+    public static String decrypt(String strToDecrypt)
+    {
+        try
+        {
+            setKey(secret);
+            Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5PADDING");
+            cipher.init(Cipher.DECRYPT_MODE, secretKey);
+            return new String(cipher.doFinal(Base64.getDecoder().decode(strToDecrypt)));
+        }
+        catch (Exception e)
+        {
+            System.out.println("Error while decrypting: " + e.toString());
+        }
+        return strToDecrypt;
     }
 }
